tests/errors/sem_call6.java
public class sem_call6 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(3 , i , 7);
}
}